--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@
 <body>
   <h1>Christin Scott</h1>
   <p>Under construction</p>
+  <section>
+    <nav>
+      <ul>
+        <li><a href="page1.html">PAGE 1</a></li>
+      </ul>
+    </nav>
+  </section>
 </body>
 </html>
