--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li><a href="page1.html">PAGE 1</a></li>
       </ul>
     </nav>
+      <a href="https://www.google.com" class="button1">Button</a>
+      <a href="https://www.google.com" class="button1">Another button</a>
   </section>
 </body>
 </html>
