--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+    .center {
+        margin: auto;
+        width: 60%;
+        border: 3px solid #73AD21;
+        padding: 10px;
+    }
+</style>
   <title>CSS Example</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class=""center">
   <h1>Christin Scott</h1>
   <p>Under construction</p>
+  <a href="https://www.google.com" class="button1">Bl</a>
+  <a href="https://www.google.com" class="button1">Ab</a>
+  <a href="https://www.google.com" class="button1">Co</a>
+  <a href="https://www.google.com" class="button1">Re</a>
+  <a href="https://www.google.com" class="button1">Pr</a>
+</div>
   <section>
     <nav>
       <ul>
-        <li><a href="page1.html">PAGE 1</a></li>
+        <!-- <li><a href="page1.html">PAGE 1</a></li> -->
       </ul>
     </nav>
-      <a href="https://www.google.com" class="button1">Button</a>
-      <a href="https://www.google.com" class="button1">Another button</a>
   </section>
 </body>
 </html>
