--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class=""center">
   <h1>Christin Scott</h1>
   <p>Under construction</p>
-  <a href="https://www.google.com" class="button1">Bl</a>
+  <a href="page1.html" class="button1">Bl</a>
   <a href="https://www.google.com" class="button1">Ab</a>
   <a href="https://www.google.com" class="button1">Co</a>
   <a href="https://www.google.com" class="button1">Re</a>
