--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
   <h1>Christin Scott</h1>
   <p>Under construction</p>
   <a href="page1.html" class="button1">Bl</a>
-  <a href="https://www.google.com" class="button1">Ab</a>
-  <a href="https://www.google.com" class="button1">Co</a>
-  <a href="https://www.google.com" class="button1">Re</a>
-  <a href="https://www.google.com" class="button1">Pr</a>
+  <a href="page1.html" class="button1">Ab</a>
+  <a href="page1.html" class="button1">Co</a>
+  <a href="page1.html" class="button1">Re</a>
+  <a href="projects.html" class="button1">Pr</a>
+
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
+     data-theme="dark" data-vanity="cmgscott"><a class="LI-simple-link" href='https://www.linkedin.com/in/cmgscott?trk=profile-badge'>Christin Scott</a></div>
 </div>
   <section>
     <nav>
